--- a/src/app/components/bs-navbar/bs-navbar.component.html
+++ b/src/app/components/bs-navbar/bs-navbar.component.html
@@ -24,7 +24,16 @@
           >Shopping Cart</a
         >
       </li>
-      <li ngbDropdown class="nav-item dropdown ">
+      <ng-template #anonymousUser>
+        <li class="nav-item">
+          <a class="nav-link " routerLink="/login">Login</a>
+        </li>
+      </ng-template>
+      <li
+        *ngIf="appUser; else anonymousUser"
+        ngbDropdown
+        class="nav-item dropdown "
+      >
         <a
           ngbDropdownToggle
           class="nav-link dropdown-toggle"
@@ -32,7 +41,7 @@
           data-toggle="dropdown"
           aria-haspopup="true"
           aria-expanded="false"
-          >Username</a
+          >{{ appUser.name }}</a
         >
         <div
           ngbDropdownMenu
@@ -40,11 +49,11 @@
           aria-labelledby="dropdown01"
         >
           <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-          <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
-          <a class="dropdown-item" routerLink="/admin/products"
-            >Manage Products</a
-          >
-          <a class="dropdown-item">Log Out</a>
+          <ng-container *ngIf="appUser.isAdmin">
+            <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
+            <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
+          </ng-container>
+          <a class="dropdown-item" (click)="logout()">Log Out</a>
         </div>
       </li>
     </ul>
