--- a/src/app/components/admin/product-form/product-form.component.html
+++ b/src/app/components/admin/product-form/product-form.component.html
@@ -5,7 +5,7 @@
         <label for="title">Title</label>
         <input
           #title="ngModel"
-          ngModel
+          [(ngModel)]="product.title"
           name="title"
           id="title"
           type="text"
@@ -23,7 +23,7 @@
           <span class="input-group-text">$</span>
           <input
             #price="ngModel"
-            ngModel
+            [(ngModel)]="product.price"
             name="price"
             id="price"
             type="text"
@@ -42,7 +42,7 @@
         <label for="category">Category</label>
         <select
           #category="ngModel"
-          ngModel
+          [(ngModel)]="product.category"
           name="category"
           id="category"
           class="form-control"
@@ -65,7 +65,7 @@
         <label for="imageUrl">Image URL</label>
         <input
           #imageUrl="ngModel"
-          ngModel
+          [(ngModel)]="product.imageUrl"
           name="imageUrl"
           id="imageUrl"
           type="text"
@@ -88,11 +88,11 @@
 
   <div class="col-md-6">
     <div class="card" style="width: 18rem;">
-      <img [src]="imageUrl.value" class="card-img-top"/>
+      <img [src]="product.imageUrl" class="card-img-top" *ngIf="product.imageUrl"/>
       <div class="card-body">
-        <h5 class="card-title">{{title.value}}</h5>
+        <h5 class="card-title">{{product.title}}</h5>
         <p class="card-text">
-         {{ price.value | currency:'USD':true }}
+         {{ product.price | currency:'USD':true }}
         </p>
       </div>
     </div>
