--- a/src/app/components/admin/product-form/product-form.component.html
+++ b/src/app/components/admin/product-form/product-form.component.html
@@ -83,6 +83,7 @@
       </div>
 
       <button class="btn btn-primary">Save</button>
+      <button class="btn btn-danger" type="button" (click)="delete()">Delete</button>
     </form>
   </div>
 
