--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -2,6 +2,13 @@
   <div class="col-3">
     <div class="list-group">
       <a
+        class="list-group-item list-group-item-action"
+        [class.active]="!category"
+        routerLink="/"
+      >
+      All categories
+      </a>
+      <a
         *ngFor="let c of categories$ | async"
         class="list-group-item list-group-item-action"
         routerLink="/"
@@ -14,7 +21,7 @@
   </div>
   <div class="col">
     <div class="row">
-      <ng-container *ngFor="let p of products$ | async; let i = index">
+      <ng-container *ngFor="let p of filterCategories; let i = index">
         <div class="col">
           <div class="card" style="width: 18rem;">
             <img [src]="p.imageUrl" class="card-img-top" alt="Card image cap" />
