--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,24 +1,24 @@
 <div class="row">
   <div class="col-3">
     <div class="sticky-top">
-        <div class="list-group">
-            <a
-              class="list-group-item list-group-item-action"
-              [class.active]="!category"
-              routerLink="/"
-            >
-            All categories
-            </a>
-            <a
-              *ngFor="let c of categories$ | async"
-              class="list-group-item list-group-item-action"
-              routerLink="/"
-              [queryParams]="{ category: c.key }"
-              [class.active]="category===c.key"
-            >
-              {{ c.name }}
-            </a>
-          </div>
+      <div class="list-group">
+        <a
+          class="list-group-item list-group-item-action"
+          [class.active]="!category"
+          routerLink="/"
+        >
+          All categories
+        </a>
+        <a
+          *ngFor="let c of categories$ | async"
+          class="list-group-item list-group-item-action"
+          routerLink="/"
+          [queryParams]="{ category: c.key }"
+          [class.active]="category === c.key"
+        >
+          {{ c.name }}
+        </a>
+      </div>
     </div>
   </div>
 
@@ -33,10 +33,11 @@
               <p class="card-text">
                 {{ p.price | currency: "USD":true }}
               </p>
-             
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary btn-block">Add to Cart</a>
+              <button (click)="addToCart(p)" class="btn btn-primary btn-block">
+                Add to Cart
+              </button>
             </div>
           </div>
         </div>
