--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,25 +1,6 @@
 <div class="row">
   <div class="col-3">
-    <div class="sticky-top">
-      <div class="list-group">
-        <a
-          class="list-group-item list-group-item-action"
-          [class.active]="!category"
-          routerLink="/"
-        >
-          All categories
-        </a>
-        <a
-          *ngFor="let c of categories$ | async"
-          class="list-group-item list-group-item-action"
-          routerLink="/"
-          [queryParams]="{ category: c.key }"
-          [class.active]="category === c.key"
-        >
-          {{ c.name }}
-        </a>
-      </div>
-    </div>
+   <product-filter [category]="category"></product-filter>
   </div>
 
   <div class="col">
@@ -38,6 +19,7 @@
               <button (click)="addToCart(p)" class="btn btn-primary btn-block">
                 Add to Cart
               </button>
+              <div></div>
             </div>
           </div>
         </div>
