--- a/src/app/components/admin/product-form/product-form.component.html
+++ b/src/app/components/admin/product-form/product-form.component.html
@@ -88,14 +88,6 @@
   </div>
 
   <div class="col-md-6">
-    <div *ngIf="product.title" class="card" style="width: 18rem;">
-      <img [src]="product.imageUrl" class="card-img-top" *ngIf="product.imageUrl"/>
-      <div class="card-body">
-        <h5 class="card-title">{{product.title}}</h5>
-        <p class="card-text">
-         {{ product.price | currency:'USD':true }}
-        </p>
-      </div>
-    </div>
+    <product-cart [product]="product" [show-actions]="false"></product-cart>
   </div>
 </div>
