--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -2,26 +2,11 @@
   <div class="col-3">
    <product-filter [category]="category"></product-filter>
   </div>
-
   <div class="col">
     <div class="row">
       <ng-container *ngFor="let p of filterCategories; let i = index">
-        <div class="col">
-          <div class="card" style="width: 22rem;">
-            <img [src]="p.imageUrl" class="card-img-top" alt="Card image cap" />
-            <div class="card-body">
-              <h5 class="card-title">{{ p.title }}</h5>
-              <p class="card-text">
-                {{ p.price | currency: "USD":true }}
-              </p>
-            </div>
-            <div class="card-footer">
-              <button (click)="addToCart(p)" class="btn btn-primary btn-block">
-                Add to Cart
-              </button>
-              <div></div>
-            </div>
-          </div>
+        <div class="col-6">
+          <product-cart [product]="p"></product-cart>
         </div>
         <div *ngIf="(i + 1) % 2 === 0" class="w-100"></div>
       </ng-container>
