--- a/src/app/components/bs-navbar/bs-navbar.component.html
+++ b/src/app/components/bs-navbar/bs-navbar.component.html
@@ -22,7 +22,7 @@
           aria-disabled="true"
           routerLink="/shopping-cart"
           >Shopping Cart 
-          <span class="badge badge-warning badge-pill"> {{ shoppingCartItemCount }}</span>
+          <span class="badge badge-warning badge-pill" *ngIf="cart$ | async as cart"> {{ cart.totalItemsCount }}</span>
           </a
         >
       </li>
