--- a/src/app/components/bs-navbar/bs-navbar.component.html
+++ b/src/app/components/bs-navbar/bs-navbar.component.html
@@ -16,7 +16,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a
-          class="nav-link disabled"
+          class="nav-link"
           href="#"
           tabindex="-1"
           aria-disabled="true"
